--- a/src/MachineLearning.ipynb
+++ b/src/MachineLearning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv(\"../Data/MatchData.csv\", sep= \";\")\n",
+    "data = pd.read_csv(\"./Data/MatchData.csv\", sep= \",\")\n",
     "data = shuffle(data)\n",
     "predict = \"Win\""
    ]
@@ -62,13 +62,6 @@
     "linear = pickle.load(pickle_in)\n",
     "predicted = linear.predict(x_test[0])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -78,7 +71,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.4"
   },
   "orig_nbformat": 4,
