--- a/src/MachineLearning.ipynb
+++ b/src/MachineLearning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,48 +49,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "could not convert string to float: 'win'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\1027d\\Documents\\Projects\\WIN-POSSIBILITES-IN-LEAGUE-OF-LEGENDS-DEPENDS-ON-TEAM\\WIN-POSSIBILITES-IN-LEAGUE-OF-LEGENDS-DEPENDS-ON-TEAM-COMBINATION-USING-MACHINE-LEARNING-\\src\\MachineLearning.ipynb Cell 4\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/1027d/Documents/Projects/WIN-POSSIBILITES-IN-LEAGUE-OF-LEGENDS-DEPENDS-ON-TEAM/WIN-POSSIBILITES-IN-LEAGUE-OF-LEGENDS-DEPENDS-ON-TEAM-COMBINATION-USING-MACHINE-LEARNING-/src/MachineLearning.ipynb#ch0000003?line=2'>3</a>\u001b[0m x_train, x_test, y_train, y_test \u001b[39m=\u001b[39m sklearn\u001b[39m.\u001b[39mmodel_selection\u001b[39m.\u001b[39mtrain_test_split(x, y, test_size\u001b[39m=\u001b[39m\u001b[39m0.1\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/1027d/Documents/Projects/WIN-POSSIBILITES-IN-LEAGUE-OF-LEGENDS-DEPENDS-ON-TEAM/WIN-POSSIBILITES-IN-LEAGUE-OF-LEGENDS-DEPENDS-ON-TEAM-COMBINATION-USING-MACHINE-LEARNING-/src/MachineLearning.ipynb#ch0000003?line=4'>5</a>\u001b[0m linear \u001b[39m=\u001b[39m linear_model\u001b[39m.\u001b[39mLinearRegression()\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/1027d/Documents/Projects/WIN-POSSIBILITES-IN-LEAGUE-OF-LEGENDS-DEPENDS-ON-TEAM/WIN-POSSIBILITES-IN-LEAGUE-OF-LEGENDS-DEPENDS-ON-TEAM-COMBINATION-USING-MACHINE-LEARNING-/src/MachineLearning.ipynb#ch0000003?line=6'>7</a>\u001b[0m linear\u001b[39m.\u001b[39;49mfit(x_train, y_train)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/1027d/Documents/Projects/WIN-POSSIBILITES-IN-LEAGUE-OF-LEGENDS-DEPENDS-ON-TEAM/WIN-POSSIBILITES-IN-LEAGUE-OF-LEGENDS-DEPENDS-ON-TEAM-COMBINATION-USING-MACHINE-LEARNING-/src/MachineLearning.ipynb#ch0000003?line=7'>8</a>\u001b[0m acc \u001b[39m=\u001b[39m linear\u001b[39m.\u001b[39mscore(x_test, y_test)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/1027d/Documents/Projects/WIN-POSSIBILITES-IN-LEAGUE-OF-LEGENDS-DEPENDS-ON-TEAM/WIN-POSSIBILITES-IN-LEAGUE-OF-LEGENDS-DEPENDS-ON-TEAM-COMBINATION-USING-MACHINE-LEARNING-/src/MachineLearning.ipynb#ch0000003?line=9'>10</a>\u001b[0m \u001b[39mif\u001b[39;00m acc \u001b[39m>\u001b[39m best:\n",
-      "File \u001b[1;32mc:\\Program Files\\Python310\\lib\\site-packages\\sklearn\\linear_model\\_base.py:684\u001b[0m, in \u001b[0;36mLinearRegression.fit\u001b[1;34m(self, X, y, sample_weight)\u001b[0m\n\u001b[0;32m    680\u001b[0m n_jobs_ \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mn_jobs\n\u001b[0;32m    682\u001b[0m accept_sparse \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpositive \u001b[39melse\u001b[39;00m [\u001b[39m\"\u001b[39m\u001b[39mcsr\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mcsc\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mcoo\u001b[39m\u001b[39m\"\u001b[39m]\n\u001b[1;32m--> 684\u001b[0m X, y \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_validate_data(\n\u001b[0;32m    685\u001b[0m     X, y, accept_sparse\u001b[39m=\u001b[39;49maccept_sparse, y_numeric\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m, multi_output\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m\n\u001b[0;32m    686\u001b[0m )\n\u001b[0;32m    688\u001b[0m sample_weight \u001b[39m=\u001b[39m _check_sample_weight(\n\u001b[0;32m    689\u001b[0m     sample_weight, X, dtype\u001b[39m=\u001b[39mX\u001b[39m.\u001b[39mdtype, only_non_negative\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m\n\u001b[0;32m    690\u001b[0m )\n\u001b[0;32m    692\u001b[0m X, y, X_offset, y_offset, X_scale \u001b[39m=\u001b[39m _preprocess_data(\n\u001b[0;32m    693\u001b[0m     X,\n\u001b[0;32m    694\u001b[0m     y,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    698\u001b[0m     sample_weight\u001b[39m=\u001b[39msample_weight,\n\u001b[0;32m    699\u001b[0m )\n",
-      "File \u001b[1;32mc:\\Program Files\\Python310\\lib\\site-packages\\sklearn\\base.py:596\u001b[0m, in \u001b[0;36mBaseEstimator._validate_data\u001b[1;34m(self, X, y, reset, validate_separately, **check_params)\u001b[0m\n\u001b[0;32m    594\u001b[0m         y \u001b[39m=\u001b[39m check_array(y, input_name\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39my\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mcheck_y_params)\n\u001b[0;32m    595\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[1;32m--> 596\u001b[0m         X, y \u001b[39m=\u001b[39m check_X_y(X, y, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mcheck_params)\n\u001b[0;32m    597\u001b[0m     out \u001b[39m=\u001b[39m X, y\n\u001b[0;32m    599\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m no_val_X \u001b[39mand\u001b[39;00m check_params\u001b[39m.\u001b[39mget(\u001b[39m\"\u001b[39m\u001b[39mensure_2d\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39mTrue\u001b[39;00m):\n",
-      "File \u001b[1;32mc:\\Program Files\\Python310\\lib\\site-packages\\sklearn\\utils\\validation.py:1090\u001b[0m, in \u001b[0;36mcheck_X_y\u001b[1;34m(X, y, accept_sparse, accept_large_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, multi_output, ensure_min_samples, ensure_min_features, y_numeric, estimator)\u001b[0m\n\u001b[0;32m   1070\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[0;32m   1071\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mestimator_name\u001b[39m}\u001b[39;00m\u001b[39m requires y to be passed, but the target y is None\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m   1072\u001b[0m     )\n\u001b[0;32m   1074\u001b[0m X \u001b[39m=\u001b[39m check_array(\n\u001b[0;32m   1075\u001b[0m     X,\n\u001b[0;32m   1076\u001b[0m     accept_sparse\u001b[39m=\u001b[39maccept_sparse,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   1087\u001b[0m     input_name\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mX\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m   1088\u001b[0m )\n\u001b[1;32m-> 1090\u001b[0m y \u001b[39m=\u001b[39m _check_y(y, multi_output\u001b[39m=\u001b[39;49mmulti_output, y_numeric\u001b[39m=\u001b[39;49my_numeric, estimator\u001b[39m=\u001b[39;49mestimator)\n\u001b[0;32m   1092\u001b[0m check_consistent_length(X, y)\n\u001b[0;32m   1094\u001b[0m \u001b[39mreturn\u001b[39;00m X, y\n",
-      "File \u001b[1;32mc:\\Program Files\\Python310\\lib\\site-packages\\sklearn\\utils\\validation.py:1115\u001b[0m, in \u001b[0;36m_check_y\u001b[1;34m(y, multi_output, y_numeric, estimator)\u001b[0m\n\u001b[0;32m   1113\u001b[0m     _ensure_no_complex_data(y)\n\u001b[0;32m   1114\u001b[0m \u001b[39mif\u001b[39;00m y_numeric \u001b[39mand\u001b[39;00m y\u001b[39m.\u001b[39mdtype\u001b[39m.\u001b[39mkind \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mO\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[1;32m-> 1115\u001b[0m     y \u001b[39m=\u001b[39m y\u001b[39m.\u001b[39;49mastype(np\u001b[39m.\u001b[39;49mfloat64)\n\u001b[0;32m   1117\u001b[0m \u001b[39mreturn\u001b[39;00m y\n",
-      "\u001b[1;31mValueError\u001b[0m: could not convert string to float: 'win'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['0' '1' '0' '0' '1' '0' '0' '1' '0' '0' '0' '0' '1' '0' '0' '0' '0' '0'\n",
+      " '0' '0' '0' '0' '0' '0' '1' '0' '1' '0' '0' '1' '0' '1' '0' '0' '1' '0'\n",
+      " '0' '0' '1' '0' '1' '0' '1' '0' '0' '0' '0' '0' '0' '0' '1' '0' '0' '0'\n",
+      " '0' '0' '0' '0' '1' '0' '1' '0']\n",
+      "0.5806451612903226\n"
      ]
     }
    ],
    "source": [
-    "x_train, x_test, y_train, y_test = sklearn.model_selection.train_test_split(x, y, test_size = 0.1)\n",
-    "model = KNeighborsClassifier(n_neighbors=2)\n",
-    "model.fit(x_train, y_train)\n",
-    "acc = model.score(x_test, y_test)\n",
-    "print(acc)\n",
-    "# best = 0\n",
-    "# for _ in range(20):\n",
-    "#     x_train, x_test, y_train, y_test = sklearn.model_selection.train_test_split(x, y, test_size=0.1)\n",
+    "best = 0\n",
+    "for i in range(20):\n",
+    "    x_train, x_test, y_train, y_test = sklearn.model_selection.train_test_split(x, y, test_size = 0.1)\n",
+    "    model = KNeighborsClassifier(n_neighbors=2)\n",
+    "    model.fit(x_train, y_train)\n",
+    "    acc = model.score(x_test, y_test)\n",
     "\n",
-    "#     linear = linear_model.LinearRegression()\n",
+    "    if acc > best:\n",
+    "        best = acc\n",
+    "        with open(\"studentgrades.pickle\", \"wb\") as f:\n",
+    "            pickle.dump(model, f)\n",
     "\n",
-    "#     linear.fit(x_train, y_train)\n",
-    "#     acc = linear.score(x_test, y_test)\n",
-    "\n",
-    "#     if acc > best:\n",
-    "#         best = acc\n",
-    "#         with open(\"studentgrades.pickle\", \"wb\") as f:\n",
-    "#             pickle.dump(linear, f)\n",
-    "\n",
-    "# pickle_in = open(\"studentgrades.pickle\", \"rb\")\n",
-    "# linear = pickle.load(pickle_in)\n",
-    "# predicted = linear.predict(x_test[0])\n"
+    "pickle_in = open(\"studentgrades.pickle\", \"rb\")\n",
+    "model = pickle.load(pickle_in)\n",
+    "predicted = model.predict(x_test)\n",
+    "print(predicted)\n",
+    "print(best)"
    ]
   }
  ],
