--- a/src/MachineLearning.ipynb
+++ b/src/MachineLearning.ipynb
@@ -74,10 +74,10 @@
     "\n",
     "    if acc > best:\n",
     "        best = acc\n",
-    "        with open(\"studentgrades.pickle\", \"wb\") as f:\n",
+    "        with open(\"gamematch.pickle\", \"wb\") as f:\n",
     "            pickle.dump(model, f)\n",
     "\n",
-    "pickle_in = open(\"studentgrades.pickle\", \"rb\")\n",
+    "pickle_in = open(\"gamematch.pickle\", \"rb\")\n",
     "model = pickle.load(pickle_in)\n",
     "predicted = model.predict(x_test)\n",
     "print(predicted)\n",
